--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,71 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+from tkinter import *
+from PIL import Image, ImageTk
+from tkinter import messagebox
+from plyer import notification
+import time
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+t = Tk()
+t.title("Notifier_Application")
+t.geometry("600x300")
+img = Image.open("my dfgdgdfg.png")
+tkimage = ImageTk.PhotoImage(img)
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Get details
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+def get_details():
+    get_title = title.get()
+    get_msg = msg.get()
+    get_time = time1.get()
 
-# Translations
-*.mo
-*.pot
+    if get_title == "" or get_msg == "" or get_time == "":
+        messagebox.showerror("Alert", "All Fields are Required !!")
+    else:
+        int_time = int(float(get_time))
+        min_to_sec = int_time * 60
+        messagebox.showinfo("Notifier Set", "Set Notification ?")
+        t.destroy()
+        time.sleep(min_to_sec)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+        notification.notify(
+            title=get_title, message=get_msg, app_name="Notifier",  timeout=10)
 
-# Flask stuff:
-instance/
-.webassets-cache
 
-# Scrapy stuff:
-.scrapy
+img_label = Label(t, image=tkimage, width=10, height=10).grid()
 
-# Sphinx documentation
-docs/_build/
+# Label 1
+t_label = Label(t, text="Title to Notify", font=("poppins", 10))
+t_label.place(x=12, y=80)
 
-# PyBuilder
-.pybuilder/
-target/
+# Entry 1
+title = Entry(t, width="25", font=("poppins", 10))
+title.place(x=123, y=80)
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Label 2
+m_label = Label(t, text="Display Message", font=("poppins", 10))
+m_label.place(x=12, y=120)
 
-# IPython
-profile_default/
-ipython_config.py
+# Entry 2
+msg = Entry(t, width="40", font="poppins")
+msg.place(x=123, y=128, height=20)
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# Label 3
+time_label = Label(t, text="Set Time", font=("poppins", 10))
+time_label.place(x=12, y=175)
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+# Entry 3
+time1 = Entry(t, width="5", font=("poppins", 13))
+time1.place(x=123, y=175)
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+# Label 4
+time_min_label = Label(t, text='min', font=("poppins", 10))
+time_min_label.place(x=175, y=180)
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
+# Button
+but = Button(t, text="SET NOTIFICATION", font=("poppins", 10, "bold"),
+             fg="#ffffff", bg="#528DFF", width=20, relief="raised", command=get_details)
+but.place(x=170, y=230)
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+t.resizable(0, 0)
+t.mainloop()
